- improve type support for query response customizer